// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RovingTabIndexItem allows another component to be specified as the rendered component using the \`as\` prop 1`] = `
<button
  onFocus={[Function]}
/>
`;

exports[`RovingTabIndexItem allows children to be declared using a child render function as an alternative to \`as\` 1`] = `
<button
  className="my-button"
  onFocus={[Function]}
>
  Click Me!
</button>
`;

exports[`RovingTabIndexItem forwards props to the \`as\` component 1`] = `
<button
  className="my-button"
  onFocus={[Function]}
>
  Click Me!
</button>
`;
